<resources>
    <string name="app_name">Calculator</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="share">/</string>
    <string name="multiply">*</string>
    <string name="min">-</string>
    <string name="sum">+</string>
    <string name="c">C</string>
    <string name="error_main">ERROR</string>
    <string name="button_num_style">buttonNumStyle</string>
    <string name="button_oper_style">buttonOperStyle</string>
    <string name="my_dark_theme">MyAppDarkTheme</string>
    <string name="my_theme">AppTheme</string>
    <string name="app_theme_dark">AppThemeDark</string>
    <string name="change_theme">Change theme</string>
    <string name="setting">setting</string>
    <string name="back">back</string>

</resources>